working socket.io service

--- a/angular.json
+++ b/angular.json
@@ -146,5 +146,8 @@
       }
     }
   },
-  "defaultProject": "socketSample"
+  "defaultProject": "socketSample",
+  "cli": {
+    "analytics": false
+  }
 }
